--- a/docs/guides/setup-channel.mdx
+++ b/docs/guides/setup-channel.mdx
@@ -58,11 +58,16 @@ Available plans:
     QiskitRuntimeService.save_account(
       token="<your-token">,
       channel="ibm_quantum", # `channel` distinguishes between different account types
-      overwrite=True # Use `overwrite=True` if you're updating your token.
+      overwrite=True # Use `overwrite=True` if you're updating your token
     )
     ```
 
     Close out of the REPL with `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.
+
+    ```python
+    # Load saved credentials
+    service = QiskitRuntimeService()
+    ```
 
       * If you have saved credentials for both an IBM Quantum Platform account and an IBM Cloud account, IBM Cloud is the default account used when you initialize your account, unless you specify `set_as_default=True` in your IBM Quantum Platform account when you use the `save_account()` method.
       * If you are saving multiple accounts per channel, consider using the `name` parameter to differentiate them.
@@ -111,16 +116,57 @@ print(result)
 
 Alternatively, you can also access quantum processors with REST APIs, enabling you to work with QPUs using any programming language or framework. 
 
-1. Retrieve your IBM Quantum token from the [IBM Quantum account page](https://quantum.ibm.com/account).
-
-2. If you do not already have a user account, get one at the [IBM Quantum login page.](https://quantum.ibm.com/login)  Your user account is associated with one or more [instances](./instances) (in the form hub / group / project) that give access to IBM Quantum services. Additionally, a unique token is assigned to each account, allowing for IBM Quantum access from Qiskit. The instructions in this section use our default instance.  For instructions to choose a specific instance, see [Connect to an instance](./instances#connect-instance).
+1. If you do not already have a user account, get one at the [IBM Quantum login page.](https://quantum.ibm.com/login)  Your user account is associated with one or more [instances](./instances) (in the form hub / group / project) that give access to IBM Quantum services. Additionally, a unique token is assigned to each account, allowing for IBM Quantum access from Qiskit. The instructions in this section use our default instance.  For instructions to choose a specific instance, see [Connect to an instance](./instances#connect-instance).
 
     <Admonition type="note">
       The Instances section in your [IBM Quantum account page](https://quantum.ibm.com/account) lists the instances that you can access.
     </Admonition>
 
+1. Retrieve your API token from the [IBM Quantum account page](https://quantum.ibm.com/account).
 
-3. Optionally obtain a temporary access token by supplying the API token obtained above. This is especially useful if you would like control over tokens, such as token invalidation. Alternatively, you can work directly with your IBM Quantum Platform API token.
+1. Because of the security risks posed by executing code that contains your API token in plain text, the recommended authentication method is to first create an environment variable for your API token, but only do so **if you are working in a trusted Python environment (such as on a personal laptop or workstation).** [Skip to the next step](#rest-untrusted) if you are not using a trusted environment, such as a shared or public computer.
+
+    The following demonstrates creating an environment variable:
+
+    ```shell
+    export IQP_API_TOKEN=<your-token>
+    ```
+    When you invoke the environment variable in your code, include `import os`, as in this example request:
+
+    ```python
+    import os
+    import requests
+    
+    reqUrl = "https://api.quantum-computing.ibm.com/runtime/jobs?limit=10&offset=0&exclude_params=true"
+    
+    headersList = {
+      "Accept": "application/json",
+      "Authorization": "Bearer os.environ.pop(IQP_API_TOKEN)"
+    }
+    
+    payload = ""
+    
+    response = requests.request("GET", reqUrl, data=payload,  headers=headersList)
+    
+    print(response.json())
+    ```
+
+    Note that when creating an environment variable, your API token is still stored locally in plain text, and should be safeguarded.
+
+1. <span id="rest-untrusted"></span>**Avoid executing code on an external or random cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by rotating it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field). To initialize the service in this situation, use your API token directly: 
+
+    ```python
+    # Refresh your API token on the dashboard after using the code as follows:
+    "Authorization": "Bearer <your-token>" 
+    ```
+
+    <Admonition type="warning">
+      When sharing code with others, ensure that your API token is not embedded directly within the Python script in plain text. Instead, share the script without the token and provide instructions for securely setting it up.
+    </Admonition>
+
+### Use a temporary access token
+
+1. Optionally obtain a temporary access token by supplying your API token. This is especially useful if you would like control over tokens, such as token invalidation.
 
     ```python
     import requests
@@ -131,7 +177,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     auth_id=auth_response.json()['id']
     ```
 
-4. View your available backends:
+1. View your available backends:
 
     ```python
     url_backends = 'https://api.quantum-computing.ibm.com/runtime/backends'
@@ -146,7 +192,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
 
     You can then [transpile circuits using REST API](./transpile-rest-api) and run them using either the [Sampler or the Estimator primitives](./primitives-rest-api).   
 
-5. After your experiments are complete, you can proceed to invalidate your token and then test its invalidation.
+1. After your experiments are complete, you can proceed to invalidate your token and then test its invalidation.
 
     ```python
     logout_url = 'https://auth.quantum-computing.ibm.com/api/users/logout'
@@ -191,7 +237,7 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     1. Find your API key. From the [API keys page](https://cloud.ibm.com/iam/apikeys), view or create your API key, then copy it to a secure location so you can use it for authentication.
     2. Find your Cloud Resource Name (CRN). Open the [Instances page](https://cloud.ibm.com/quantum/instances) and click your instance. In the page that opens, click the icon to copy your CRN. Save it in a secure location so you can use it for authentication.
 
-1. <span id="cloud-save"></span>Authenticate to the service by calling `QiskitRuntimeService` with your saved credentials or with your IBM Cloud API key and CRN. Remember that your credentials should be kept confidential, so do not share it in a notebook or in any public code.
+1. <span id="cloud-save"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#cloud-untrusted) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Cloud.) To use `save_account()`, activate a Python virtual environment (see the [installation instructions](/guides/install-qiskit#local) if you do not already have a virtual environment set up). Then run Python in your virtual environment to open a read-eval-print loop (REPL), and enter the following:
 
     ```python
     from qiskit_ibm_runtime import QiskitRuntimeService
@@ -200,42 +246,41 @@ Alternatively, you can also access quantum processors with REST APIs, enabling y
     channel="ibm_cloud",
     token="<IBM Cloud API key>", # Your token is confidential.
     # Take care not to share your token in public code.
-    instance="<IBM Cloud CRN>"
+    instance="<IBM Cloud CRN>",
+    name="<account-name>",
+    overwrite=True, # Use `overwrite=True` if you're updating your token.
     )
     ```
 
-    You can optionally use the `save_account()` method to save your credentials for easy access later on, before initializing the service. See these [instructions to create an environment variable](#save-account) to use in the following code. **Credentials are saved locally as plain text. Never include your token in a notebook or public code!**
+1. Close out of the REPL with `exit()`. From now on, whenever you need to authenticate to the service, you can load your credentials with `QiskitRuntimeService()`.  Test your setup and ensure that you can connect to the service:
 
     ```python
-    import os
     from qiskit_ibm_runtime import QiskitRuntimeService
 
-    # Save account to disk.
-    QiskitRuntimeService.save_account(
-        channel="ibm_cloud",
-        token=iqp_api_token,
-        instance="<IBM Cloud CRN>",
-        name="<account-name>",
-        # Use `overwrite=True` if you're updating your token.
-        overwrite=True,
-    )
-
     # Load saved credentials
-    service = QiskitRuntimeService(name="<account-name>")
+    service = QiskitRuntimeService()
     ```
 
-      * If you save your credentials to disk, you can use `QiskitRuntimeService()` in the future to initialize your account. The `channel` parameter distinguishes between different account types. When initializing the account, IBM Cloud is the default account used if you have saved credentials for both an IBM Quantum Platform and an IBM Cloud account unless you specify otherwise with the `channel` parameter.
+      * If you have saved credentials for both an IBM Quantum Platform account and an IBM Cloud account, IBM Cloud is the default account used when you initialize your account, unless you specify `set_as_default=True` in your IBM Quantum Platform account when you use the `save_account()` method.
       * If you are saving multiple accounts per channel, consider using the `name` parameter to differentiate them.
       * Credentials are saved to `$HOME/.qiskit/qiskit-ibm.json`.  Do not manually edit this file.
       * If you don't save your credentials, you must specify them every time you start a new session.
 
-1. Test your setup.  Ensure that you can connect to the service:
+1. <span id="cloud-untrusted"></span>**Avoid executing code on an external or random cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by deleting it on the [API keys page](https://cloud.ibm.com/iam/apikeys) and creating a new one. To initialize the service in this situation, you can use code like the following:
 
-```python
-from qiskit_ibm_runtime import QiskitRuntimeService
-
-service = QiskitRuntimeService()
-```
+    ```python
+    from qiskit_ibm_runtime import QiskitRuntimeService
+    
+    service = QiskitRuntimeService(
+      channel="ibm_cloud", 
+      # Delete your token on the API keys page after entering this code:
+      token="<IBM Cloud API key>", 
+      instance="<IBM Cloud CRN>"
+      )
+    ```
+    <Admonition type="warning">
+      When sharing code with others, ensure that your API token is not embedded directly within the Python script in plain text. Instead, share the script without the token and provide instructions for securely setting it up.
+    </Admonition>
 
 ## Next steps
 
