--- a/docs/guides/qiskit-addons-mpf.ipynb
+++ b/docs/guides/qiskit-addons-mpf.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "67e54fee-28ed-4ebe-bcb8-715aa06721a1",
    "metadata": {},
    "source": [
     "# Multi-product formula (MPF)\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a2f529c-4983-447d-9923-a423b34e7215",
    "metadata": {},
    "source": [
     "## Install MPF package\n",
@@ -42,6 +44,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7ac19afa-954c-4c1d-b3b1-7871db85e8b4",
    "metadata": {},
    "source": [
     "## Theoretical Background\n",
@@ -74,6 +77,12 @@
     "4. Similarly, the coefficient associated with the largest $k_j$ value should not dominate, since this implies that we are just using a single product formula.\n",
     "5. Lastly, the norm of the coefficients $x_j$ obtained should be small as this indicates a well-conditioned MPF [1](#references)\n",
     "\n",
+    "## Next steps\n",
+    "\n",
+    "<Admonition type=\"tip\" title=\"Recommendations\">\n",
+    "    - Read through the page on [getting started with MPF](/guides/qiskit-addons-mpf-get-started)\n",
+    "</Admonition>\n",
+    "\n",
     "## References\n",
     "\n",
     "1. A. Carrera Vazquez, D. J. Egger, D. Ochsner, and S. Wörner, [\"Well-conditioned multi-product formulas for hardware-friendly Hamiltonian simulation\"](https://quantum-journal.org/papers/q-2023-07-25-1067/), Quantum 7, 1067 (2023).\n",
@@ -83,11 +92,25 @@
   }
  ],
  "metadata": {
-  "title": "Overview Multi-product formula (MPF) addon",
   "description": "Overview page of the qiskit addon which generates multi-product formulas",
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
-  }
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3"
+  },
+  "title": "Overview Multi-product formula (MPF) addon"
  },
  "nbformat": 4,
  "nbformat_minor": 2
