--- a/docs/guides/primitive-input-output.ipynb
+++ b/docs/guides/primitive-input-output.ipynb
@@ -67,7 +67,7 @@
     "### Sampler PUB\n",
     "For the Sampler primitive, the format of the PUB tuple contains at most three values:\n",
     "- A single `QuantumCircuit`, which may contain one or more [`Parameter`](../api/qiskit/qiskit.circuit.Parameter) objects\n",
-    "  - *Note: these circuits should also include measurement instructions for each of the qubits to be sampled.*\n",
+    "   *Note: These circuits should also include measurement instructions for each of the qubits to be sampled.*\n",
     "- A collection of parameter values to bind the circuit against $\\theta_k$ (only needed if any `Parameter` objects are used that must be bound at runtime)\n",
     "- (Optionally) a number of shots to measure the circuit with"
    ]
