--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "    <span id=\"save-account\"></span>**If you are working in a trusted Python environment (such as on a personal laptop or workstation),** use the `save_account()` method to save your credentials locally. ([Skip to the next step](#functions-untrusted) if you are not using a trusted environment, such as a shared or public computer, to authenticate to IBM Quantum Platform.)\n",
     "\n",
-    "    To use `save_account()`, run Python in your shell to open a REPL (read-eval-print loop), then enter the following:"
+    "    To use `save_account()`, run `python` in your shell to open a REPL (read-eval-print loop), then enter the following:"
    ]
   },
   {
