--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -107,7 +107,7 @@
    "id": "80441467-1d9a-4107-8570-22afa6e369f7",
    "metadata": {},
    "source": [
-    "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by rotating it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field). To initialize the service in this situation, expand the following section to view code you can use:\n",
+    "3. <span id=\"functions-untrusted\"></span>**Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a public computer), change your API token after each use by rotating it on the [IBM Quantum Platform dashboard](https://quantum.ibm.com/) (click the refresh button in the API token field). To initialize the service in this situation, expand the following section to view code you can use:\n",
     "\n",
     "    <details>\n",
     "        <summary>Initialize the service in an untrusted environment</summary>\n",
