--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "01031ad2-6b17-421c-b9c6-0424d5e9ce0c",
    "metadata": {},
    "source": [
     "# Specify options\n",
@@ -35,7 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "id": "2cb26278-06e8-4684-aeda-9d2310da619e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,10 +48,13 @@
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "\n",
-    "options =  EstimatorOptions(resilience_level=2, resilience={\"zne_mitigation\": True, \"zne\": {\"noise_factors\": [1, 3, 5]}})\n",
+    "options = EstimatorOptions(\n",
+    "    resilience_level=2,\n",
+    "    resilience={\"zne_mitigation\": True, \"zne\": {\"noise_factors\": [1, 3, 5]}},\n",
+    ")\n",
     "\n",
     "# or...\n",
-    "options =  EstimatorOptions()\n",
+    "options = EstimatorOptions()\n",
     "options.resilience_level = 2\n",
     "options.resilience.zne_mitigation = True\n",
     "options.resilience.zne.noise_factors = [1, 3, 5]\n",
@@ -59,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9a4ccd98-05ad-4a15-aee4-f312727df848",
    "metadata": {},
    "source": [
     "#### Dictionary\n",
@@ -68,7 +74,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "31f2e0e1-5388-48ea-a761-4e301479c749",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,11 +86,21 @@
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "\n",
     "# Setting options during primitive initialization\n",
-    "estimator = Estimator(backend, options={\"resilience_level\": 2, \"resilience\": {\"zne_mitigation\": True, \"zne\": {\"noise_factors\": [1, 3, 5]}}})"
+    "estimator = Estimator(\n",
+    "    backend,\n",
+    "    options={\n",
+    "        \"resilience_level\": 2,\n",
+    "        \"resilience\": {\n",
+    "            \"zne_mitigation\": True,\n",
+    "            \"zne\": {\"noise_factors\": [1, 3, 5]},\n",
+    "        },\n",
+    "    },\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "16f43cf1-c6c7-4460-9436-822fbf49f993",
    "metadata": {},
    "source": [
     "### Update options after initialization\n",
@@ -95,7 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "id": "4cfe6be0-fe11-45f1-886c-527f8dd7f4f7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,11 +129,14 @@
     "# This uses auto-complete.\n",
     "estimator.options.default_shots = 4000\n",
     "# This does bulk update.\n",
-    "estimator.options.update(default_shots=4000, resilience={\"zne_mitigation\": True})"
+    "estimator.options.update(\n",
+    "    default_shots=4000, resilience={\"zne_mitigation\": True}\n",
+    ")"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "648b372a-a8b9-4032-964b-7380a45c9f41",
    "metadata": {},
    "source": [
     "<span id=\"run-method\"></span>\n",
@@ -127,6 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce9e59b0-542d-4c01-bd28-73bf21bcc199",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,6 +171,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9c125c3a-05ee-463c-8b0a-4ae0ea05b0bf",
    "metadata": {},
    "source": [
     "### Special cases\n",
@@ -165,11 +188,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0ce97eb4-74af-410a-8cce-e562de7a519b",
    "metadata": {},
    "outputs": [],
    "source": [
     "from qiskit_ibm_runtime import EstimatorV2, QiskitRuntimeService\n",
-    "from qiskit import QuantumCircuit\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(\"ibm_auckland\")\n",
@@ -183,6 +206,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "572c9e7c-d00b-4eca-8149-d53692123e25",
    "metadata": {},
    "source": [
     "#### Shots (Sampler only)\n",
@@ -247,6 +271,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e5cef15-ecbb-415a-8415-c5a124d0f596",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,10 +286,12 @@
     "\n",
     "# Setting options after primitive initialization\n",
     "# This uses auto-complete.\n",
-    "sampler.options.default_shots=2000\n",
+    "sampler.options.default_shots = 2000\n",
     "\n",
     "# This does bulk update.  The value for default_shots is overridden if you specify shots with run() or in the PUB.\n",
-    "sampler.options.update(default_shots=1024, dynamical_decoupling={\"sequence_type\": \"XpXm\"})\n",
+    "sampler.options.update(\n",
+    "    default_shots=1024, dynamical_decoupling={\"sequence_type\": \"XpXm\"}\n",
+    ")\n",
     "\n",
     "# Sample two circuits at 128 shots each.\n",
     "sampler.run([circuit1, circuit2], shots=128)"
@@ -272,6 +299,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8bf43541-0ff0-4cd4-9a1b-51413143cdf0",
    "metadata": {},
    "source": [
     "### Maximum execution time\n",
@@ -284,6 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2ef3d346-40f3-4937-86a6-32d264f18ffc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,6 +329,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7b985be1-abea-4525-b5ba-0d1f510f9e35",
    "metadata": {},
    "source": [
     "<span id=\"no-error-mitigation\"></span>\n",
@@ -315,6 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a5612ed-e02f-4d68-8de7-641930d3486b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,6 +368,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9435b2f7-38a4-4a62-95eb-c3161ab809c1",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -348,18 +380,27 @@
     "    - Decide what [execution mode](execution-modes) to run your job in.\n",
     "</Admonition>"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
